# HW_24.2

./: README.md  env_templates  pyproject.toml
config/: settings.py  urls.py
default_data/: payment_data.json
materials/: models.py  serializers.py  urls.py  views.py
materials/migrations/: 0001_initial.py  0002_initial.py
payment/migrations/: 0001_initial.py
users/: models.py  views.py
users/migrations/: 0001_initial.py
